--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -122,13 +122,13 @@
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <Button
-            android:id="@+id/fragment_register_signIn_button"
+            android:id="@+id/fragment_register_signup_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign in"
+            android:layout_marginTop="10sp"
+            android:text="Sign Up"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +145,7 @@
             android:textSize="20sp"
 
             app:layout_constraintEnd_toEndOf="@+id/fragment_register_repeat_password"
-            app:layout_constraintTop_toBottomOf="@id/fragment_register_signIn_button" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_register_signup_button" />
 
         <TextView
             android:id="@+id/fragment_register_go_to_login"
