--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -7,7 +7,7 @@
     android:id="@+id/recommendation_item_layout">
 
     <ImageView
-        android:id="@+id/recommendation_item_image"
+        android:id="@+id/user_item_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_alignParentStart="true"
@@ -19,25 +19,25 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/recommendation_item_name"
+        android:id="@+id/user_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
-        android:text="Regino Prifti"
+        android:text="John Doe"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/recommendation_item_image"
+        app:layout_constraintStart_toEndOf="@+id/user_item_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/recommendation_item_similarity"
+        android:id="@+id/user_item_similarity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:text="Recommended: 87%"
         android:textSize="20sp"
-        android:text="Similarity 87%"
-        app:layout_constraintStart_toStartOf="@+id/recommendation_item_name"
-        app:layout_constraintTop_toBottomOf="@+id/recommendation_item_name" />
+        app:layout_constraintStart_toStartOf="@+id/user_item_name"
+        app:layout_constraintTop_toBottomOf="@+id/user_item_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
