--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -30,14 +30,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/user_item_similarity"
+        android:id="@+id/user_item_textview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Recommended: 87%"
+        android:text="Recommended:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/user_item_name"
         app:layout_constraintTop_toBottomOf="@+id/user_item_name" />
 
+    <TextView
+        android:id="@+id/user_item_similarity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="90%"
+        android:textSize="20sp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintStart_toEndOf="@+id/user_item_textview1"
+        app:layout_constraintTop_toBottomOf="@+id/user_item_name" />
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/user_item_messenger_icon"
+
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/messenger"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
