--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -20,21 +20,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <EditText
-        android:id="@+id/fragment_search_search_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:drawableRight="@android:drawable/ic_menu_search"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:text="Search Music"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_textview"
-        app:layout_constraintLeft_toLeftOf="@id/fragment_search_recyclerView"
-        />
-
     <androidx.recyclerview.widget.RecyclerView
 
 
@@ -42,11 +27,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_editText" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_search_searchView" />
+
+    <SearchView
+        android:id="@+id/fragment_search_searchView"
+        android:layout_width="298dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_search_recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_textview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
