--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/track_item_artist"
+        android:id="@+id/track_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/track_item_title"
+        android:id="@+id/track_item_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -25,8 +25,8 @@
         android:text="Engine failure"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/track_item_artist"
-        app:layout_constraintTop_toBottomOf="@+id/track_item_artist" />
+        app:layout_constraintStart_toStartOf="@+id/track_item_title"
+        app:layout_constraintTop_toBottomOf="@+id/track_item_title" />
 
     <ImageButton
         android:id="@+id/track_item_add_button"
