--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -98,10 +98,11 @@
         app:layout_constraintTop_toBottomOf="@+id/fragment_login_login_button" />
 
     <TextView
-        android:id="@+id/main_activity_register"
+        android:id="@+id/fragment_login_register_instead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:clickable="true"
         android:text="Register"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
