--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:ems="10"
-            android:hint="jhn_doe_00"
+            android:hint="jhn_doe"
             android:inputType="textPersonName"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:ems="10"
-            android:hint="******"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:ems="10"
-            android:hint="******"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
