--- a/app/src/main/res/drawable/splash_screen_background.xml
+++ b/app/src/main/res/drawable/splash_screen_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:opacity="transparent">
+    android:opacity="opaque">
     <item android:drawable="@android:color/white" />
     <item
         android:drawable="@drawable/reco_logo"
