Implements textview when no data is available

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
         android:id="@+id/fragment_login_logo"
         android:layout_width="203dp"
         android:layout_height="127dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="40dp"
         android:background="@null"
         android:text="Username"
         android:textSize="30sp"
@@ -91,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Don't have an account?"
+        android:text="@string/suggest_registration"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/fragment_login_password"
         app:layout_constraintHorizontal_bias="0.941"
