--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,4 +77,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/fragment_home_no_data_msg_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No recommendations available."
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_home_recyclerView"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_home_recyclerView"
+        app:layout_constraintStart_toStartOf="@+id/fragment_home_recyclerView"
+        app:layout_constraintTop_toTopOf="@+id/fragment_home_recyclerView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
