--- a/app/src/main/res/layout/fragment_my_library.xml
+++ b/app/src/main/res/layout/fragment_my_library.xml
@@ -29,10 +29,12 @@
         android:layout_marginTop="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.087" />
+        app:layout_constraintVertical_bias="0.093">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <Button
         android:id="@+id/fragment_myLibrary_addMore_button"
@@ -48,6 +50,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_myLibrary_recyclerview"
         app:layout_constraintVertical_bias="0.872" />
+
+    <TextView
+        android:id="@+id/library_fragment_no_data_msg_textView"
+        android:layout_width="260dp"
+        android:layout_height="30dp"
+        android:text="Looks like your library is empty!"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_myLibrary_recyclerview"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_myLibrary_recyclerview"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="@+id/fragment_myLibrary_recyclerview"
+        app:layout_constraintTop_toTopOf="@+id/fragment_myLibrary_recyclerview"
+        app:layout_constraintVertical_bias="0.602" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
