Implements and updates core features
- implements navigation graph
- improves code performance
- improves utility shared preferences methods
- simplifies elements of code in main & home activity
- improves overall fragment code

--- a/app/src/main/res/layout/fragment_my_library.xml
+++ b/app/src/main/res/layout/fragment_my_library.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="8dp"
-        android:text="Add more"
+        android:text="Search Music"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
