--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -24,23 +24,25 @@
            app:layout_constraintTop_toTopOf="parent" />
 
        <ImageButton
-           android:id="@+id/imageButton"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginEnd="16dp"
-           android:src="@drawable/ic_baseline_check_24"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintTop_toTopOf="@+id/fragment_update_profile_TextView1" />
-
-       <ImageButton
-           android:id="@+id/imageButton2"
+           android:id="@+id/fragment_update_profile_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_close_24"
+           android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_update_profile_TextView1" />
 
+
+       <ImageButton
+           android:id="@+id/fragment_update_profile_apply_changes_button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginEnd="16dp"
+           android:src="@drawable/ic_baseline_check_24"
+           android:visibility="visible"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintTop_toTopOf="@+id/fragment_update_profile_TextView1" />
 
        <de.hdodenhof.circleimageview.CircleImageView
 
@@ -59,9 +61,10 @@
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="Change Profile Photo"
+           android:text="Change Photo"
            android:textAllCaps="false"
            android:textSize="15sp"
+           android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_update_profile_profile_photo" />
@@ -84,6 +87,8 @@
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
+           android:maxLength="25"
+           android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fragment_update_profile_TextView2"
