--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -42,8 +42,10 @@
         android:layout_marginStart="56dp"
         android:layout_marginEnd="57dp"
         android:layout_marginBottom="30dp"
+        android:iconifiedByDefault="false"
         app:layout_constraintBottom_toTopOf="@+id/fragment_search_recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_textview"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
