--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="We Recommend"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,13 +22,26 @@
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/fragment_recommendations_recycler_view"
-        android:layout_width="367dp"
-        android:layout_height="543dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.636"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.189" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Looks like you have no recommendations."
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_recommendations_recycler_view"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_recommendations_recycler_view"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@+id/fragment_recommendations_recycler_view"
+        app:layout_constraintTop_toTopOf="@+id/fragment_recommendations_recycler_view"
+        app:layout_constraintVertical_bias="0.317" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
