--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -49,18 +49,10 @@
         android:id="@+id/changePasswordFragment"
         android:name="com.reco.view.ui.ChangePasswordFragment"
         android:label="fragment_change_password"
-        tools:layout="@layout/fragment_change_password" >
-        <action
-            android:id="@+id/action_changePasswordFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_change_password" />
     <fragment
         android:id="@+id/updateProfileFragment2"
         android:name="com.reco.view.ui.UpdateProfileFragment"
         android:label="fragment_update_profile"
-        tools:layout="@layout/fragment_update_profile" >
-        <action
-            android:id="@+id/action_updateProfileFragment2_to_settingsFragment"
-            app:destination="@id/settingsFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_update_profile" />
 </navigation>
